new file:   offwhtp/biber-n-build.sh

--- a/mid-level/evm/evm.tex
+++ b/mid-level/evm/evm.tex
@@ -20,7 +20,7 @@
 \begin{document}
 \maketitle
 \paragraph{Notation}: \texttt{EVM}
-\paragraph{Description}: The stack-based \textsl{virtual machine} which lies at the heart of the Ethereum and performs the actions of a computer.  
+\paragraph{Description}: The stack-based \textsl{virtual machine} which lies at the heart of the Ethereum and performs the actions of a computer. This is actually an instantial runtime that executes several substates, as EVM computation instances, before adding the finished result, all calculations having been completed, to the final state  via the finalization function.  
 
 \end{document}
 
