--- a/offwhtp/References.bib
+++ b/offwhtp/References.bib
@@ -101,7 +101,7 @@ note = "[Online; accessed 16-September-2017]"
 	commit = {f9120fcca937b118cc52bdfa350fd4cd5ca39d0b}
 }
 
-@book{StarkRobert2017,
+@book{BorgerStark2017,
 	place={New York}, 
 	title={Abstract state machines: a method for high-level system design and analysis}, 
 	publisher={Springer}, 
