modified:   off-white paper.tex

--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -183,9 +183,11 @@
 
 \setcounter{secnumdepth}{2}
 
-\author{\textbf{M.D. Dameron}}
+\date{}
 
-\title{\Huge{Off-White Paper} \\ \hfill \\ \Large{A Technical Description of Ethereum}}
+\author{\textnormal{\textbf{Micah Dameron}}}
+
+\title{\Huge{Blanched-Almond Paper} \\ \hfill \\ \Large{Technical Explanations of Ethereum}}
 
 \makeindex
 
@@ -208,7 +210,7 @@
 
 \hfill \hfill
 \begin{center}\textbf{Abstract}\end{center}\par
-	\abstract{The goal of this paper\footnote{Formally, \textit{Blanched-Almond Paper}}} is to create and expand concepts from Ethereum around which, notwithstanding any earlier documentation, there may be some justified confusion. We use pseudocode to describe Ethereum's operation rather than formal math and greek symbols, because pseudocode is actually \textit{preferable} when describing \textsc{Abstract State Machines},\footnote{E. Borger and S. Robert F., \textit{Abstract state machines}:\textsl{ A method for high-level system design and analysis}. 1, pp. 3-8. Springer, 2003.} which Ethereum is. This paper takes an approach to describing Ethereum that focuses on clarity and approachability. Our prime source has been the Ethereum \textit{Yellowpaper}, but much supplemental knowledge has been found elsewhere and crucial points from other sources have been added as well for the reader's benefit.
+	\abstract{The goal of this paper \footnote{Formally, \textit{Off-White Paper}}is to create and expand concepts from Ethereum about which, notwithstanding any earlier documentation, there may be some justified confusion. We use pseudocode rather than mathematical notation to describe Ethereum's operation, because pseudocode has many advantages when describing \textsc{Abstract State Machines},\footnote{E. Borger and S. Robert F., \textit{Abstract state machines}:\textsl{ A method for high-level system design and analysis}. 1, pp. 3-8. Springer, 2003.} like Ethereum. This paper takes an approach to describing Ethereum that focuses on clarity and approachability. Our prime source has been the Ethereum \textit{Yellowpaper}, but much supplemental knowledge has been found elsewhere and crucial points from other sources have been added as well for the reader's benefit.}
 	
 
 \clearpage
